# thinkbox-krakatoa-my

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  MayaKrakatoa.exp  MayaKrakatoa.map  NOTICE.txt  README.md  build.py  conanfile.py  kmyRenderer.xml  stdafx.cpp  stdafx.h  version_gen.py
include/: GenerateStickyChannelsCommand.hpp  KrakatoaParticleJitter.hpp  KrakatoaPluginDirectory.hpp  KrakatoaRender.hpp  KrakatoaRenderSettingsNode.hpp  KrakatoaSettings.hpp  KrakatoaVersionCommand.hpp  PRTExporter.hpp  PRTFractal.hpp  PRTFractalsIconMesh.hpp  PRTIconMesh.hpp  PRTLoader.hpp  PRTLoaderIconMesh.hpp  PRTModifiers.hpp  PRTObject.hpp  PRTObjectUI.hpp  PRTObjectUIGeometryOverride.hpp  PRTSaver.hpp  PRTSurface.hpp  PRTSurfaceIconMesh.hpp  PRTVolume.hpp  PRTVolumeIconMesh.hpp  maya_frame_buffer_interface.hpp  maya_ksr.hpp  maya_progress_bar_interface.hpp  maya_render_save_interface.hpp
scripts/: AEPRTFractalTemplate.mel  AEPRTLoaderTemplate.mel  AEPRTMagmaTemplate.mel  AEPRTMayaParticleTemplate.mel  AEPRTModifierTemplate.mel  AEPRTSurfaceTemplate.mel  AEPRTVolumeTemplate.mel  KMY2PRT_Saver.mel  KrakatoaDeinit.mel  KrakatoaInit.mel  KrakatoaMagma.mel  KrakatoaModEditor.mel  KrakatoaModifiers.mel  KrakatoaNoticesDialog.py  KrakatoaRenderer.mel  MayaBirthChannelGenerator.py  MayaKrakatoa.py
src/: GenerateStickyChannelsCommand.cpp  KrakatoaParticleJitter.cpp  KrakatoaPluginDirectory.cpp  KrakatoaRender.cpp  KrakatoaRenderSettingsNode.cpp  KrakatoaSettings.cpp  KrakatoaVersionCommand.cpp  PRTExporter.cpp  PRTFractal.cpp  PRTFractalsIconMesh.cpp  PRTIconMesh.cpp  PRTLoader.cpp  PRTLoaderIconMesh.cpp  PRTModifiers.cpp  PRTObject.cpp  PRTObjectUI.cpp  PRTObjectUIGeometryOverride.cpp  PRTSaver.cpp  PRTSurface.cpp  PRTSurfaceIconMesh.cpp  PRTVolume.cpp  PRTVolumeIconMesh.cpp  dllMain.cpp  maya_frame_buffer_interface.cpp  maya_ksr.cpp  maya_progress_bar_interface.cpp  maya_render_save_interface.cpp
